# ttymap

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  build.rs  cliff.toml  config.example.toml  deny.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  refactor.md
.github/workflows/: audit.yml  ci.yml  release.yml
benches/: decode_tile.rs  render_frame.rs  tile_disk_hit.rs
benches/fixtures/: z14.pbf
docs/: architecture.md  configuration.md  design.md  lua-architecture.md  lua-bridge-surface.md  lua-plugin-migration.md
engine/src/: config.rs  lib.rs
proto/: vector_tile.proto
runtime/: init.lua
runtime/lua/: aircraft.lua  attribution.lua  center.lua  export.lua  help.lua  here.lua  hubble.lua  info.lua  iss.lua  quake.lua  satellite.lua  scalebar.lua  search.lua  wiki.lua
runtime/plugin/: aircraft.lua  attribution.lua  center.lua  export.lua  help.lua  here.lua  info.lua  ping.lua  ping_simulation.lua  quake.lua  scalebar.lua  search.lua
scripts/: bump-version.sh
src/: app.rs  app_command.rs  app_msg.rs  background.rs  color.rs  color_palette.rs  command.rs  compositor.rs  config.rs  focus.rs  geo.rs  geocode.rs  keyboard.rs  keymap.rs  lib.rs  logging.rs  main.rs  mouse.rs  nominatim.rs  painter.rs  palette.rs  styler.rs  theme.rs  ui.rs  wikipedia.rs
src/app/: dispatcher.rs  event.rs  frame_timer.rs  frame_widget.rs  intent.rs  mod.rs  mouse.rs  msg.rs  overlay.rs  sidebar.rs  ui.rs
src/cli/: snap.rs
src/commands/: clear_cache.rs  mod.rs  snap.rs
src/compositor/: base.rs  map_api.rs  mod.rs  op.rs  painter.rs  render.rs  sidebar.rs  window.rs
src/core/: action.rs  config.rs  dispatcher.rs  input.rs  keymap.rs  mod.rs  overlay.rs  sidebar.rs  snapshot.rs  state.rs
src/focus/: mod.rs  surface.rs
src/front/: mod.rs
src/frontend/: event.rs  input_thread.rs  intent.rs  mod.rs  mouse.rs  msg.rs  observer.rs  ui.rs
src/input/: keyboard.rs  keymap.rs  mod.rs  mouse.rs  thread.rs
src/lua/: component.rs  handle.rs  host.rs  init_lua.rs  intent.rs  map_api.rs  mod.rs  op.rs  palette_provider.rs  registrar.rs  registry.rs  runtimepath.rs  sender.rs  sgp4.rs
src/map/: action.rs  api.rs  mod.rs  state.rs
src/palette/: action.rs  mod.rs  panel.rs
src/plugin/: help.rs  mod.rs
src/plugin_api/: async_job.rs  initial_jump.rs  layout.rs  map_api.rs  mod.rs  panel.rs  throttle.rs  (+1 more)
ttymap-app/: Cargo.toml
ttymap-cli/: Cargo.toml
ttymap-cli/src/: lib.rs  snap.rs
ttymap-config/: Cargo.toml
ttymap-config/src/: dirs.rs  lib.rs
ttymap-core/: Cargo.toml
ttymap-core/src/: command.rs  config.rs  lib.rs
ttymap-core/src/event/: bus.rs  payload.rs
ttymap-engine/: Cargo.toml
ttymap-engine/benches/: decode_tile.rs  render_frame.rs
ttymap-engine/src/: config.rs  error.rs  geo.rs  ipc.rs  lib.rs
ttymap-engine/src/map/: action.rs  mod.rs  state.rs
ttymap-engine/src/map/render/: earcut_worker.rs  frame.rs  overlay.rs  pipeline.rs  polygon.rs  renderer.rs  thread.rs
ttymap-engine/src/map/tile/: cache.rs  mod.rs
ttymap-engine/src/map/tile/fetch/: http.rs  lane.rs  mod.rs
ttymap-engine/src/shared/http/: mod.rs  rate_limit.rs
ttymap-engine/src/theme/: mod.rs
ttymap-lua/: Cargo.toml
ttymap-lua/runtime/lua/plugin/: antipode.lua
ttymap-lua/runtime/lua/ttymap/: sidebar.lua
ttymap-lua/src/: handle.rs  host.rs  init_lua.rs  lib.rs  map_api.rs  registrar.rs  runtimepath.rs  tick.rs  vm.rs
ttymap-lua/src/api/: config.rs  help.rs  http.rs  imperative.rs  log.rs  map.rs  mod.rs  register.rs  storage.rs  tile.rs
ttymap-lua/src/bridge/: card_component.rs  card_handle.rs  card_parse.rs  event_handle.rs  mod.rs  palette_handle.rs  palette_provider.rs  registrar_handle.rs
ttymap-shared/: Cargo.toml
ttymap-shared/src/: command.rs  lib.rs
ttymap-shared/src/event/: mod.rs
ttymap-tui/: Cargo.toml
ttymap-tui/benches/: render_frame.rs  tile_disk_hit.rs
ttymap-tui/runtime/: init.lua
ttymap-tui/runtime/lua/plugin/: autospin.lua  equator.lua  here.lua  info.lua  ruler.lua  traceroute.lua
ttymap-tui/runtime/lua/plugin/geohash/: algorithm.lua  init.lua  md5.lua
ttymap-tui/runtime/lua/plugin/search/: init.lua  nominatim.lua
ttymap-tui/runtime/lua/plugin/travel/routes/: init.lua
ttymap-tui/runtime/lua/ttymap/: animation.lua  cities.lua  director.lua  geohash.lua  location.lua  notify.lua  plugin_searcher.lua  search.lua  traceroute.lua
ttymap-tui/runtime/plugin/: center.lua  geo_quiz.lua  help.lua  here.lua  notify.lua  ping_simulation.lua  quake.lua  snake.lua  terminator.lua
ttymap-tui/runtime/plugin/aircraft/: init.lua
ttymap-tui/runtime/plugin/satellite/: init.lua  satellites.lua
ttymap-tui/runtime/plugin/search/: init.lua
ttymap-tui/runtime/plugin/travel/: init.lua
ttymap-tui/runtime/plugin/travel/routes/: init.lua  japan.lua
ttymap-tui/runtime/plugin/wiki/: init.lua
ttymap-tui/src/: app_event.rs  command.rs  config.rs  frame_widget.rs  lib.rs  logging.rs  main.rs  overlay.rs  sidebar.rs
ttymap-tui/src/app/: dispatcher.rs  event.rs  mod.rs  sidebar.rs  ui.rs
ttymap-tui/src/cli/: api_info.rs  mod.rs  snap.rs
ttymap-tui/src/compositor/: activation.rs  base.rs  component.rs  map_api.rs  mod.rs  op.rs  window.rs
ttymap-tui/src/event/: bus.rs  mod.rs  payload.rs
ttymap-tui/src/input/: keymap.rs  mod.rs  mouse.rs  thread.rs
ttymap-tui/src/lua/: capture.rs  handle.rs  host.rs  init_lua.rs  loader.rs  map_api.rs  mod.rs  plugin_loader.rs  registrar.rs  registry.rs  runtimepath.rs  tick.rs  vm.rs
ttymap-tui/src/lua/api/: config.rs  help.rs  http.rs  imperative.rs  json.rs  map.rs  map_table.rs  mod.rs  register.rs  spec.rs  tile.rs
ttymap-tui/src/lua/bridge/: card_component.rs  card_parse.rs  event_handle.rs  handle.rs  mod.rs  palette_provider.rs  registrar_handle.rs
ttymap-tui/src/palette/: action.rs  mod.rs  panel.rs
ttymap-tui/src/palette/provider/: command.rs  theme.rs
ttymap-tui/src/shared/: geoip.rs
ttymap-tui/src/theme/: ui.rs
ttymap-tui/tests/: ipc_handshake.rs
vhs/: nav.tape  ping_simulation.tape  travel.tape
(+347 files in other folders)
