[workspace]
members = ["engine", "."]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kohei-Wada/ttymap"

[package]
name = "ttymap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A terminal map viewer that renders Mapbox Vector Tiles as Unicode Braille characters."
license.workspace = true
repository.workspace = true
homepage = "https://github.com/Kohei-Wada/ttymap"
readme = "README.md"
keywords = ["map", "tui", "mapbox", "terminal", "braille"]
categories = ["command-line-utilities", "visualization"]
# `runtime/` is no longer embedded in the binary (#183), but we still
# include it in the source distribution so `cargo install --path .`
# users (combined with `make install-runtime`) can `cp -r` from a
# crate-extracted source tree.
include = [
    "src/**/*",
    "runtime/**/*",
    "Cargo.toml",
    "Makefile",
    "README.md",
    "LICENSE-*",
]

[dependencies]
ttymap-engine = { path = "engine" }
crossterm = "0.29"
ratatui = "0.30"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = "1"
serde_json = "1"
directories = "6"
unicode-width = "0.2"
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossbeam-channel = "0.5"
mlua = { version = "0.11", features = ["lua54", "vendored"] }
sgp4 = { version = "2.4.0", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = "0.5"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

[[bench]]
name = "decode_tile"
harness = false

[[bench]]
name = "render_frame"
harness = false

[[bench]]
name = "tile_disk_hit"
harness = false

[profile.release]
strip = "symbols"
