[workspace]
members = ["ttymap-engine", "ttymap-shared", "ttymap-config", "ttymap-tui", "ttymap-lua", "ttymap-cli", "ttymap-app"]
resolver = "2"
default-members = ["ttymap-app"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kohei-Wada/ttymap"

[profile.release]
strip = "symbols"
