[package]
name = "ttymap-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CLI subcommands for ttymap — `snap` (headless single-frame render) and the `engine-worker` subprocess entry."
license.workspace = true
repository.workspace = true

[dependencies]
ttymap-engine = { path = "../ttymap-engine", version = "0.2.0" }
ttymap-shared = { path = "../ttymap-shared", version = "0.2.0" }
ttymap-config = { path = "../ttymap-config", version = "0.2.0" }
ttymap-lua = { path = "../ttymap-lua", version = "0.2.0" }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
