[package]
name = "ttymap-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "ttymap rendering engine — viewport state, tile pipeline, styler. Headless / ratatui-free."
license.workspace = true
repository.workspace = true

[dependencies]
crossbeam-channel = "0.5"
flate2 = "1"
prost = "0.14"
rstar = "0.12"
earcut = "0.4"
serde = { version = "1", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
lru = "0.16"
indexmap = "2.14.0"
unicode-width = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"
directories = "6"
thiserror = "2"

[build-dependencies]
prost-build = "0.14"
protox = "0.9"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "decode_tile"
harness = false

[[bench]]
name = "render_frame"
harness = false

[[bench]]
name = "tile_disk_hit"
harness = false
