[package]
name = "ttymap-lua"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Lua plugin runtime for ttymap — mlua VM, the `ttymap.*` Lua-facing API surface, and bridge adapters. The bundled runtime tree (`init.lua` + plugins) lives at the workspace root in `runtime/`."
license.workspace = true
repository.workspace = true

[dependencies]
ttymap-engine = { path = "../ttymap-engine", version = "0.2.0" }
ttymap-shared = { path = "../ttymap-shared", version = "0.2.0" }
ttymap-config = { path = "../ttymap-config", version = "0.2.0" }
ttymap-tui = { path = "../ttymap-tui", version = "0.2.0" }
crossterm = "0.29"
ratatui = "0.30"
mlua = { version = "0.11", features = ["lua54", "vendored"] }
log = { version = "0.4", features = ["std"] }
serde = "1"
serde_json = "1"
unicode-width = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sgp4 = { version = "2.4.0", default-features = false, features = ["std"] }
