[package]
name = "ttymap-shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Leaf vocabulary — UserCommand enum + EventBus — consumed by every crate above the engine. UI-runtime-free (no ratatui / crossterm / mlua / tokio)."
license.workspace = true
repository.workspace = true

[dependencies]
ttymap-engine = { path = "../ttymap-engine", version = "0.1.0" }
log = { version = "0.4", features = ["std"] }
