[package]
name = "ttymap-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Terminal-native scriptable globe — Mapbox Vector Tiles rendered as Unicode Braille, with a Lua plugin runtime for live data overlays and camera tours."
license.workspace = true
repository.workspace = true
homepage = "https://github.com/Kohei-Wada/ttymap"
readme = "../README.md"
keywords = ["map", "tui", "mapbox", "terminal", "braille"]
categories = ["command-line-utilities", "visualization"]
# `runtime/` is no longer embedded in the binary (#183), but we still
# include it in the source distribution so `cargo install -p ttymap-tui`
# users (combined with `make install-runtime`) can `cp -r` from a
# crate-extracted source tree.
include = [
    "src/**/*",
    "runtime/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
]

# The crate name is `ttymap-tui` (workspace prefix), but the installed
# executable stays `ttymap` so `cargo install` and `~/.cargo/bin/ttymap`
# don't change.
[[bin]]
name = "ttymap"
path = "src/main.rs"

[dependencies]
ttymap-engine = { path = "../ttymap-engine", version = "0.1.0" }
crossterm = "0.29"
ratatui = "0.30"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
unicode-width = "0.2"
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossbeam-channel = "0.5"
mlua = { version = "0.11", features = ["lua54", "vendored"] }
sgp4 = { version = "2.4.0", default-features = false, features = ["std"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
